--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,6 @@
-%![](r_fly.jpg){width=50%}
+---
+format: html
+---
 
 # Welcome {.unnumbered}
 
@@ -9,7 +11,7 @@
 
 <style>
   body {
-  background-image: images/meghivo_deko.png;
+  background-image: url("https://images.pexels.com/photos/189349/pexels-photo-189349.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -24,5 +26,4 @@ Csenge + Lapo 2024
 
 Csillagkert, Budapest, Magyarorszag
 
-![Using the salinity refractometer](micro_photos/included/salinity_check.jpg){#fig-salinity-filling}
 
