--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,7 @@ format: html
 
 <style>
   body {
-  background-image: url("https://images.pexels.com/photos/189349/pexels-photo-189349.jpeg");
+  background-image: url("https://www.dropbox.com/scl/fi/wkma4l3ubchwk7faoscxe/test_blue1.png?rlkey=i0c6ccaebygi5okuzkxoyqy89&dl=0");
   background-size: cover;
   background-repeat: no-repeat;
 }
