--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ css: styles.css
   
 </style>
 
-## 2024 september 14 {.test2}
+### 2024 september 14 {.test3}
 
 
 ### Csillagkert, Budapest, Magyarorszag {.test3}
