--- a/index.qmd
+++ b/index.qmd
@@ -8,8 +8,9 @@ css: styles.css
 <style>
   body {
   background-image: url("https://raw.githubusercontent.com/Cpetak/esk_honlap/main/images/test_blue1.png");
-  background-size: cover;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
+  background-position: center;
 }
   
 </style>
@@ -25,4 +26,3 @@ css: styles.css
    
 </p>
 
-![](images/mySketch.gif){width=300 fig-align="center"}
